# rsw-segmentation

./: .env.template  .gitignore  BatchGenerator.py  DLv3Plus.sh  DataPreprocessing.py  DeepLabV3Plus.py  LICENSE  PrepareData.py  README.md  SegFormer.py  SegFormer.sh  UNet.py  basic_data_structure_description.md  config.json  dataset_creation.ipynb  display_image.ipynb  environment.yml  interactiveMode.sh  load_modules_interactiveMode.sh  main.py  metrics.py  model_utils.py  modelsDeepLabV3Plus_metrics.json  modelsSegFormer_metrics.json  modelsUNetPlusPlus_metrics.json  modelsUNet_metrics.json  non_matches_Europe_Lab_Data.txt  non_matches_lab_rsw_segmentation.txt  pyproject.toml  requirements.txt  test.py  train.py  train_script.sh  unet.sh  unetplusplus.sh
cluster_printouts/: prints_DLv3Plus.o47349743  prints_DLv3Plus.o47356727  prints_Prelim_DLv3Plus.o47350666  prints_Prelim_SegFormer.o47350663  prints_Prelim_unet.o47350615  prints_Prelim_unetPP.o47350658  prints_SegFormer.o47349731  prints_SegFormer.o47356725  prints_mini_unet.o47388966  prints_mini_unet.o47388991  prints_unet.o47349746  prints_unet.o47356726  prints_unetPP.o47349739  prints_unetPP.o47356723
configs/: DeepLabV3Plus_config.json  MiniUNet_config.json  SegFormer_config.json  UNetPlusPlus_config.json  UNet_config.json
configs/prelim/: DeepLabV3Plus_config.json  SegFormer_config.json  UNetPlusPlus_config.json  UNet_config.json
src/: BatchGenerator.py  DLv3Plus.sh  DLv3Plus_prelim.sh  DataPreprocessing.py  DataProcessing.py  DatasetCreation.py  MiniUNet.py  PrepareData.py  SegFormer.py  SegFormer.sh  SegFormer_prelim.sh  UNet.py  UNetPlusPlus.py  main.py  metrics.py  mini_unet.sh  mini_unet_prelim.sh  model_utils.py  requirements.txt  run_job.sh  test.py  train.py  unet.sh  unet_prelim.sh  unetplusplus.sh  unetplusplus_prelim.sh
src/configs/: DeepLabV3Plus_config.json  MiniUNet_config.json  SegFormer_config.json  UNetPlusPlus_config.json  UNet_config.json
src/configs/prelim/: DeepLabV3Plus_config.json  MiniUNet_config.json  SegFormer_config.json  UNetPlusPlus_config.json  UNet_config.json
src/scripts/: README.md  submit_deeplabv3plus.sh  submit_miniunet.sh  submit_segformer.sh  submit_unet.sh  submit_unetplusplus.sh
