[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsw-segmentation"
version = "1.0.0"
description = "Deep learning models for resistance spot welding segmentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hendrik Baacke", email = "hendrik.baacke@rwth-aachen.de"},
]
keywords = ["deep-learning", "segmentation", "computer-vision", "welding", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    # Core ML framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.3",
    
    # Model architectures and backbones
    "transformers>=4.20.0",
    "timm>=0.9.0",
    "efficientnet-pytorch>=0.7.0",
    
    # Data processing and utilities
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scikit-image>=0.19.0",
    "imageio>=2.9.0",
    "tifffile>=2020.9.3",
    
    # Visualization and plotting
    "matplotlib>=3.5.0",
    "pillow>=8.0.0",
    
    # Experiment tracking and logging
    "comet-ml>=3.30.0",
    "tqdm>=4.60.0",
    
    # Model visualization
    "torchviz>=0.0.2",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

hpc = [
    # Additional packages that might be needed on HPC clusters
    "codecarbon>=2.0.0",  # For carbon footprint tracking
]

[project.urls]
Homepage = "https://henba1.github.io/rsw-segmentation"
Documentation = "https://github.com/henba1/rsw-segmentation#readme"
Repository = "https://github.com/henba1/rsw-segmentation"
"Bug Tracker" = "https://github.com/henba1/rsw-segmentation/issues"

[project.scripts]
rsw-train = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.configs" = ["*.json"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "comet_ml.*",
    "segmentation_models_pytorch.*",
    "torchviz.*",
    "skimage.*",
]
ignore_missing_imports = true 